# V1SH_model

./: .gitignore  README.md  main.py  main_full_debug.ipynb  main_naive.ipynb  pyproject.toml  pytest.ini  requirements.txt
docs/: general.tex  literature.bib  main.tex
docs/content/: 0A-coverpage.tex  0C-toc.tex  1-abstract.tex  2-report.tex  3-bibliography.tex
experiments/: time_evolution.ipynb
experiments/calibration/: calibration.ipynb  calibration.py
src/experiments/: filling_in_&_leaking_out.ipynb  medial_axis_effect.ipynb  medial_axis_effect_2.ipynb  time_evolution.ipynb  two_point_EI_network.ipynb
src/experiments/calibration/: calibration.ipynb  calibration.py
src/inputs/: examples.py  visualize.py
src/models/: V1_model_1.py  V1_model_2.py  naive_model.py
src/utils/: activations.py  connections.py  normalization.py  numba.py  tuning_curve.py
src/v1sh_model/inputs/: examples.py  visualize.py
src/v1sh_model/models/: V1_model_1.py  V1_model_2.py  naive_model.py
src/v1sh_model/utils/: connections.py  normalization.py
tests/inputs/: test_examples.py
tests/models/: test_V1_model_1.py  test_V1_model_2.py  test_naive_model,py  test_naive_model.py
tests/utils/: test_activations.py  test_connections.py  test_normalization.py  test_numba.py  test_summation.py  test_tuning_curve.py
